# examples-python-uv

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
01.intro/: 01-math-operations.py  02-data-types.py  03-variables.py  04-multi-line-strings.py  05-modify-string-lower-upper-replace.py  06-lists(array).py  07-dictionary(object).py  08-sets(unique-element-array)-tuples(immutable-array).py  09-conditionals-operators.py  10-for-loops.py  11-while-loops.py  12-for-loop-append-to-list.py
02.intermediate/: 01.built-in-functions.py  02.modules.py  03.packages-pandas-simple-DataFrame.py  04.custom-functions.py  05.fns-with-default-args.py  06.fns-with-arbitrary-args.py  07.lambda-fns.py  08.error-handling-try-except-raise.py  sales.csv
03.data-visualization/: 01.iterators-vs-iterable.py  02.enumerate-zip.py  03.iterators-pd-read_csv-chunk.py  04.list-comprehensions.py  05.list-comp-advanced.py  06.generators.py  07.csv-import-dataframe.py  08.more-csv-zip-dict-toList-datarame.py  09.generators-large-csv-file-processing.py  10.process_large_csv_chunks.py  11.fn-version-of-10.py  ind_pop_data.csv  tweets.csv  world_indicators_simple.csv
04.data-types/: 01.list(array)-extend-append-index-pop-sorted.py  02.tuple(immutable-array)-zip-list-enumerate.py  03.string-startswith-lower-templiteral.py  04.dictionary(object)-tupleUnpacking.py  05.dictionary(object)-get-update-del-pop.py  06.dictionary(object)-get-items-in-keys.py  07.numeric-types.py  08.booleans-comparisons.py  11.defaultdict.py  (+4 more)
(+194 files in other folders)
